tasks with conf.gulp

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sistemium-gulp",
   "version": "0.0.1",
   "description": "Sistemium gulp helper library",
-  "main": "index.js",
+  "main": "gulpfile.babel.js",
   "scripts": {
     "compile": "babel src --out-dir lib",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
@@ -25,6 +25,26 @@
   },
   "homepage": "https://github.com/Sistemium/sistemium-gulp#readme",
   "dependencies": {
+    "browser-sync": "~2.9.11",
+    "browser-sync-spa": "~1.0.3",
+    "uglify-save-license": "~0.4.1",
+    "wiredep": "~2.2.2",
+    "wrench": "~1.5.8",
+    "chalk": "~1.1.1",
+    "del": "~2.0.2",
+    "eslint-plugin-angular": "~0.12.0",
+    "estraverse": "~4.1.0",
+    "http-proxy-middleware": "~0.9.0",
+    "jade": "~1.11.0",
+    "karma": "~0.13.10",
+    "karma-angular-filesort": "~1.0.0",
+    "karma-coverage": "~0.5.2",
+    "karma-jasmine": "~0.3.6",
+    "karma-ng-html2js-preprocessor": "~0.2.0",
+    "karma-phantomjs-launcher": "~0.2.1",
+    "lodash": "~3.10.1",
+    "main-bower-files": "~2.9.0",
+
     "babel-cli": "*",
     "coveralls": "*",
     "isparta": "*",
@@ -33,6 +53,8 @@
     "sinon": "^1.17.4",
     "sinon-stub-promise": "^3.0.1",
     "watch": "^0.19.1",
+    "phantomjs": "~1.9.18",
+    "run-sequence": "^1.1.5",
 
     "babel": "^6.5.2",
     "babel-core": "^6.4.10",
