--- a/package.json
+++ b/package.json
@@ -51,12 +51,11 @@
     "watch": "^0.19.1",
     "phantomjs": "~1.9.18",
     "run-sequence": "^1.1.5",
-    "babel-core": "^6.4.10",
+    "babel-register": "^6.11.6",
+    "babel-preset-es2015": "^6.13.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-runtime": "^6.9.2",
     "gulp": "^3.9.0",
     "gulp-add-src": "^0.2.0",
     "gulp-angular-templatecache": "^1.7.0",
