--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-autoprefixer": "2.3.1",
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.2.10",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-consolidate": "~0.1.2",
     "gulp-env": "^0.2.0",
