--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
   "presets": ["es2015"],
-  "plugins": ["add-module-exports", ["transform-runtime", {
-    "polyfill": false,
-    "regenerator": true
-  }]]
+  "plugins": ["add-module-exports"]
 }
