--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sistemium-gulp",
   "version": "0.0.13",
   "description": "Sistemium gulp helper library",
-  "main": "gulpfile.babel.js",
+  "main": "gulpfile.js",
   "scripts": {
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "test": "babel-node ./node_modules/.bin/isparta cover _mocha",
@@ -23,87 +23,70 @@
   },
   "homepage": "https://github.com/Sistemium/sistemium-gulp#readme",
   "dependencies": {
-    "babel-cli": "*",
+    "angular-mocks": "^1.5.0-beta.2",
+    "autoprefixer": "^6.2.3",
+    "babel-core": "^6.2.0",
+    "babel-eslint": "^6.0.2",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-register": "^6.11.6",
-    "browser-sync": "~2.14.0",
-    "browser-sync-spa": "~1.0.3",
-    "chalk": "~1.1.1",
-    "coveralls": "*",
-    "eslint-plugin-angular": "~1.3.1",
-    "estraverse": "~4.1.0",
-    "gulp": "^3.9.0",
-    "gulp-add-src": "^0.2.0",
-    "gulp-angular-filesort": "~1.1.1",
-    "gulp-angular-templatecache": "^1.7.0",
-    "gulp-autoprefixer": "2.3.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-cache": "^0.2.10",
-    "gulp-clean": "^0.3.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-consolidate": "~0.1.2",
-    "gulp-env": "^0.2.0",
-    "gulp-eslint": "~3.0.0",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.2.0",
+    "bower": "^1.7.9",
+    "browser-sync": "^2.9.11",
+    "browser-sync-spa": "^1.0.3",
+    "del": "^2.0.2",
+    "es6-shim": "^0.35.0",
+    "eslint": "^3.2.2",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-config-xo-space": "^0.12.0",
+    "eslint-plugin-angular": "^1.3.0",
+    "eslint-plugin-babel": "^3.1.0",
+    "gulp": "gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
+    "gulp-angular-filesort": "^1.1.1",
+    "gulp-angular-templatecache": "^1.8.0",
+    "gulp-babel": "^6.1.0",
+    "gulp-cssnano": "^2.1.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-filter": "^4.0.0",
-    "gulp-flatten": "~0.2.0",
-    "gulp-html2jade": "^1.1.1",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-inject": "^1.3.1",
-    "gulp-inject-string": "^1.1.0",
-    "gulp-istanbul": "~0.10.3",
-    "gulp-istanbul-enforcer": "^1.0.3",
-    "gulp-jade": "^1.0.1",
-    "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^1.11.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.2.4",
-    "gulp-main-bower-files": "^1.5.2",
-    "gulp-manifest": "^0.1.1",
-    "gulp-minify-css": "^1.1.6",
-    "gulp-minify-html": "~1.0.4",
-    "gulp-mocha": "^2.1.3",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
+    "gulp-inject": "^3.0.0",
+    "gulp-insert": "^0.5.0",
     "gulp-ng-annotate": "^1.1.0",
-    "gulp-ng-constant": "^1.1.0",
-    "gulp-node-inspector": "^0.1.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-protractor": "^2.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "~0.5.4",
-    "gulp-rev": "^5.0.0",
+    "gulp-postcss": "^6.0.1",
+    "gulp-pug": "^3.0.4",
+    "gulp-rev": "^6.0.1",
     "gulp-rev-replace": "^0.4.2",
-    "gulp-ruby-sass": "~0.7.1",
-    "gulp-sass": "^2.0.1",
-    "gulp-scss-lint": "^0.2.1",
-    "gulp-size": "~2.0.0",
-    "gulp-sort": "^1.1.1",
+    "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-svgmin": "^1.1.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-useref": "~1.3.0",
-    "gulp-util": "^3.0.5",
-    "gulp-watch": "^4.3.5",
-    "http-proxy-middleware": "~0.9.0",
-    "isparta": "*",
-    "jade": "~1.11.0",
-    "karma": "~0.13.10",
-    "karma-angular-filesort": "~1.0.0",
-    "karma-coverage": "~0.5.2",
-    "karma-jasmine": "~0.3.6",
-    "karma-ng-html2js-preprocessor": "~0.2.0",
-    "karma-phantomjs-launcher": "~0.2.1",
-    "main-bower-files": "~2.9.0",
-    "mocha": "*",
-    "node-mocks-http": "^1.5.2",
-    "phantomjs": "~1.9.18",
-    "run-sequence": "^1.1.5",
-    "sinon": "^1.17.4",
-    "sinon-stub-promise": "^3.0.1",
-    "uglify-save-license": "~0.4.1",
-    "watch": "^0.19.1",
-    "wiredep": "~2.2.2",
-    "wrench": "~1.5.8"
+    "gulp-uglify": "^1.4.2",
+    "gulp-useref": "^3.0.3",
+    "gulp-util": "^3.0.7",
+    "jasmine": "^2.4.1",
+    "karma": "^0.13.14",
+    "karma-angular-filesort": "^1.0.0",
+    "karma-coverage": "^0.5.3",
+    "karma-jasmine": "^0.3.8",
+    "karma-junit-reporter": "^0.4.2",
+    "karma-ng-html2js-preprocessor": "^0.2.0",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-phantomjs-shim": "^1.1.2",
+    "main-bower-files": "^2.9.0",
+    "phantomjs-prebuilt": "^2.1.6",
+    "uglify-save-license": "^0.4.1",
+    "wiredep": "^4.0.0"
+  },
+  "eslintConfig": {
+    "globals": {
+      "expect": true,
+      "angular": true
+    },
+    "root": true,
+    "env": {
+      "browser": true,
+      "jasmine": true
+    },
+    "extends": [
+      "xo-space/esnext"
+    ]
   }
 }
