--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
     "gulp-inject": "^3.0.0",
     "gulp-insert": "^0.5.0",
+    "gulp-manifest": "^0.1.1",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-postcss": "^6.0.1",
     "gulp-pug": "^3.0.4",
