--- a/package.json
+++ b/package.json
@@ -47,14 +47,17 @@
     "gulp-cssnano": "^2.1.0",
     "gulp-eslint": "^2.0.0",
     "gulp-filter": "^4.0.0",
+    "gulp-flatten": "^0.3.1",
     "gulp-htmlmin": "^1.3.0",
     "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
     "gulp-inject": "^3.0.0",
     "gulp-insert": "^0.5.0",
+    "gulp-main-bower-files": "^1.5.3",
     "gulp-manifest": "^0.1.1",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-postcss": "^6.0.1",
     "gulp-pug": "^3.0.4",
+    "gulp-replace": "^0.5.4",
     "gulp-rev": "^6.0.1",
     "gulp-rev-replace": "^0.4.2",
     "gulp-sass": "^2.1.1",
