--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "karma-phantomjs-shim": "^1.1.2",
     "main-bower-files": "^2.9.0",
     "phantomjs-prebuilt": "^2.1.6",
+    "through2": "^2.0.1",
     "uglify-save-license": "^0.4.1",
     "wiredep": "^4.0.0"
   },
