--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-angular-filesort": "^1.1.1",
     "gulp-angular-templatecache": "^1.8.0",
     "gulp-babel": "^6.1.0",
+    "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.0",
     "gulp-eslint": "^2.0.0",
     "gulp-filter": "^4.0.0",
