--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gulp-main-bower-files": "^1.5.3",
     "gulp-manifest": "^0.1.1",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-pipe": "^1.0.4",
     "gulp-postcss": "^6.0.1",
     "gulp-pug": "^3.0.4",
     "gulp-replace": "^0.5.4",
