--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-flatten": "^0.3.1",
     "gulp-htmlmin": "^1.3.0",
     "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
+    "gulp-identity": "^0.1.0",
     "gulp-inject": "^3.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-main-bower-files": "^1.5.3",
