--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^6.0.1",
     "gulp-rev-replace": "^0.4.2",
-    "gulp-sass": "^2.1.1",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sass": "~3.1.0",
+    "gulp-sourcemaps": "~2.4.1",
     "gulp-uglify": "^1.4.2",
     "gulp-useref": "^3.0.3",
     "gulp-util": "^3.0.7",
@@ -80,6 +80,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-phantomjs-shim": "^1.1.2",
     "main-bower-files": "^2.9.0",
+    "node-sass-import-once": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.6",
     "through2": "^2.0.1",
     "uglify-save-license": "^0.4.1",
