--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/Sistemium/sistemium-gulp#readme",
   "dependencies": {
     "angular-mocks": "^1.5.0-beta.2",
-    "autoprefixer": "^6.2.3",
+    "autoprefixer": "^7.0.0",
     "babel-core": "^6.2.0",
     "babel-eslint": "^6.0.2",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -84,6 +84,7 @@
     "phantomjs-prebuilt": "^2.1.6",
     "through2": "^2.0.1",
     "uglify-save-license": "^0.4.1",
+    "webkit-assign": "^1.4.1",
     "wiredep": "^4.0.0"
   },
   "eslintConfig": {
