--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "gulp-pipe": "^1.0.4",
     "gulp-postcss": "^6.0.1",
     "gulp-pug": "^3.0.4",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^6.0.1",
     "gulp-rev-replace": "^0.4.2",
