--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.2.0",
     "bower": "^1.7.9",
+    "brace-expansion": "^1.1.11",
     "browser-sync": "^2.9.11",
     "browser-sync-spa": "^1.0.3",
     "del": "^2.0.2",
