--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   "dependencies": {
     "angular-mocks": "^1.5.0-beta.2",
     "autoprefixer": "^7.0.0",
-    "babel-core": "^6.2.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^6.0.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.2.0",
+    "babel-preset-es2015": "^6.24.1",
     "bower": "^1.7.9",
     "brace-expansion": "^1.1.11",
-    "browser-sync": "^2.9.11",
+    "browser-sync": "^2.26.5",
     "browser-sync-spa": "^1.0.3",
     "del": "^2.0.2",
     "es6-shim": "^0.35.0",
@@ -44,11 +44,11 @@
     "eslint-plugin-angular": "^1.3.0",
     "eslint-plugin-babel": "^3.1.0",
     "gulp": "gulpjs/gulp#3f5aba28718dc19e4bf600fb88f128158ff2ff83",
-    "gulp-angular-filesort": "^1.1.1",
+    "gulp-angular-filesort": "^1.2.1",
     "gulp-angular-templatecache": "^1.8.0",
     "gulp-babel": "^6.1.0",
     "gulp-concat-util": "^0.5.5",
-    "gulp-cssnano": "^2.1.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-eslint": "^2.0.0",
     "gulp-filter": "^4.0.0",
     "gulp-flatten": "^0.3.1",
@@ -67,23 +67,23 @@
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^6.0.1",
     "gulp-rev-replace": "^0.4.2",
-    "gulp-sass": "~3.1.0",
-    "gulp-sourcemaps": "~2.4.1",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^1.4.2",
-    "gulp-useref": "^3.0.3",
+    "gulp-useref": "^3.1.6",
     "gulp-util": "^3.0.7",
     "jasmine": "^2.4.1",
     "karma": "^0.13.14",
-    "karma-angular-filesort": "^1.0.0",
+    "karma-angular-filesort": "^1.0.2",
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.8",
     "karma-junit-reporter": "^0.4.2",
     "karma-ng-html2js-preprocessor": "^0.2.0",
-    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-phantomjs-shim": "^1.1.2",
     "main-bower-files": "^2.9.0",
     "node-sass-import-once": "^1.2.0",
-    "phantomjs-prebuilt": "^2.1.6",
+    "phantomjs-prebuilt": "^2.1.16",
     "through2": "^2.0.1",
     "uglify-save-license": "^0.4.1",
     "webkit-assign": "^1.4.1",
@@ -105,7 +105,7 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
+    "babel-cli": "^6.26.0",
     "watch": "^0.19.2"
   }
 }
