--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "main-bower-files": "^2.9.0",
     "node-sass-import-once": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.16",
+    "sass": "^1.51.0",
     "through2": "^2.0.1",
     "uglify-save-license": "^0.4.1",
     "webkit-assign": "^1.4.1",
